--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "tests"
   ],
   "devDependencies": {
-    "angular": "1.2.0-rc.3",
-    "jquery": "~2.0.3"
+    "jquery": "~2.0.3",
+    "angular": "~1.2.0",
+    "bootstrap": "~3.0.2"
   }
 }
