--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-contrib-compass": "~0.6.0",
     "grunt-remove-logging": "~0.1.1",
     "grunt-contrib-uglify": "~0.2.4",
-    "grunt-notify": "~0.2.13"
+    "grunt-notify": "~0.2.13",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
